fixed spacing on resume on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,10 +161,10 @@ nav {
 
 /* ------ Container Resume Styling */
 .resume-header {
-  padding-bottom: 3rem;
+  padding-bottom: 1.0rem;
 }
 .resume-header-2 {
-  padding-bottom: 1.5rem;
+  margin: 10px 10px;
 }
 .resume-company {
   border-bottom: 6px solid #f09301;
@@ -288,6 +288,12 @@ a .icon:hover {
     background-image: url('../img/backgroundimage/uCw9VpO_cropped-991px.png');
     background-size: 55%;
     padding: 0 0 22rem 0;
+  }
+  .resume-header {
+    padding-bottom: 3rem;
+  }
+  .resume-header-2 {
+    padding-bottom: 1.5rem;
   }
   .footer-icons {
     padding: 0 1.5rem .5rem 0;
